--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cache Cleaner Extension | Coming Soon</title>
+    <title>UR Academy | Coming Soon</title>
 
     <!-- Tailwind CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-
-    <style>
-        /* Custom styles can be added here if needed */
-    </style>
 </head>
 
 <body>
